--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "classnames": "^2.5.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "tailwind-datepicker-react": "^1.4.3",
     "tailwind-hamburgers": "^1.3.5",
     "typescript": "^4.9.5",
     "uid": "^2.0.2",
