--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.4",
     "@mui/x-charts": "^7.11.0",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
